--- a/src/boat_test/src/mapchannel.ui
+++ b/src/boat_test/src/mapchannel.ui
@@ -18,9 +18,9 @@
     <property name="geometry">
      <rect>
       <x>-10</x>
-      <y>50</y>
+      <y>80</y>
       <width>811</width>
-      <height>521</height>
+      <height>491</height>
      </rect>
     </property>
    </widget>
@@ -151,14 +151,53 @@
    <widget class="Line" name="line_4">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>40</y>
-      <width>801</width>
-      <height>16</height>
+      <x>-10</x>
+      <y>70</y>
+      <width>821</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>45</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>清除轨迹</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>45</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>保存轨迹</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_4">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>45</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>回放</string>
     </property>
    </widget>
   </widget>
